test/Harper/Tests/Good/issue002_lamPar.har
f :: Integer -> Integer -> Integer -> Integer;
f n = { 
  return (\(x :: Integer) (y :: Integer) => n + x + y);
};

appMul :: Integer -> Integer -> Integer -> Integer -> Integer;
appMul a b = (\(n :: Integer) => f n (a * b));

main :: Integer;
main = appMul 7 17 42 5;