test/Harper/Tests/Bad/issue013_genPatMatch.har
f :: (a -> b) -> a -> b;
f x = x;

g :: Bool -> Integer;
g b = {
  if b {
    return 42;
  }
  return 17;
};

h :: a -> b;
h = {
  match f g {
    (y :: c -> d) => return y;
  }
};

main :: String;
main = h "abc";